Se crea el hola mundo de la app

--- a/package.json
+++ b/package.json
@@ -11,5 +11,14 @@
     "web"
   ],
   "author": "Rivalcoba",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.15.0",
+    "cookie-parser": "^1.4.1",
+    "errorhandler": "^1.4.3",
+    "express": "^4.13.4",
+    "express-handlebars": "^3.0.0",
+    "method-override": "^2.3.5",
+    "morgan": "^1.7.0"
+  }
 }
