--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.13.4",
     "express-handlebars": "^3.0.0",
     "method-override": "^2.3.5",
+    "moment": "^2.11.2",
     "morgan": "^1.7.0"
   }
 }
