--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-handlebars": "^3.0.0",
     "method-override": "^2.3.5",
     "moment": "^2.11.2",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "multer": "^1.1.0"
   }
 }
