--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "express-handlebars": "^3.0.0",
     "method-override": "^2.3.5",
     "moment": "^2.11.2",
+    "mongodb": "^2.1.14",
+    "mongoose": "^4.4.10",
     "morgan": "^1.7.0",
     "multer": "^1.1.0"
   }
