--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "Rivalcoba",
   "license": "ISC",
   "dependencies": {
+    "MD5": "^1.3.0",
+    "async": "^1.5.2",
     "body-parser": "^1.15.0",
     "cookie-parser": "^1.4.1",
     "errorhandler": "^1.4.3",
